Cambio de estilos
+ Login 
+ Servlet para imagenes
+ Unificado font awesome 
+ Cambios en los estilos del header y el footer
+ Añadidos logos e imagenes

--- a/Basura/Basura/src/main/webapp/styles.css
+++ b/Basura/Basura/src/main/webapp/styles.css
@@ -29,3 +29,7 @@ and open the template in the editor.
     border-color: rgb(235,51,44); 
     margin-top: 20px;
 }
+
+.bgBlack{
+    background-color: black;
+}
