--- a/Basura/Basura/src/main/webapp/styles.css
+++ b/Basura/Basura/src/main/webapp/styles.css
@@ -33,3 +33,41 @@ and open the template in the editor.
 .bgBlack{
     background-color: black;
 }
+
+.inputValue{
+    border:none;
+    border-bottom:1px solid black;  
+}
+
+.caja {
+   margin:20px auto 40px auto;	
+   border:1px solid black;
+   height:30px;
+   overflow: hidden;
+   width: 230px;
+   position:relative;
+}
+select {
+   background: transparent;
+   border: black;
+   font-size: 14px;
+   height: 30px;
+   padding: 5px;
+   width: 250px;
+}
+select:focus{ outline: none;}
+
+.caja::after{
+	content:"\025be";
+	display:table-cell;
+	padding-top:7px;
+	text-align:center;
+	width:30px;
+	height:30px;
+	background-color:black;
+        color: white;
+	position:absolute;
+	top:0;
+	right:0px;	
+	pointer-events: none;
+}
